Second generatio service installer